--- a/ReactPart/src/components/SearchAuctionsContent/SearchAuctionsContent.module.css
+++ b/ReactPart/src/components/SearchAuctionsContent/SearchAuctionsContent.module.css
@@ -34,6 +34,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
+  padding: 1rem;
 }
 .sortSelect:hover {
   border-color: #007bff;
