--- a/ReactPart/src/pages/SearchAuctions/SearchAuctions.module.css
+++ b/ReactPart/src/pages/SearchAuctions/SearchAuctions.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex: 1;
   min-height: 0;
-  max-width: 1440px;
+  /* max-width: 1440px; */
   width: 100%;
 }
 .content > *:first-child {
@@ -45,4 +45,3 @@
     width: 100%;
   }
 }
-
